# DashBoardModel

dashboard-model/: pyproject.toml
dashboard-model/dashboard_model/: __init__.py  model.py
dashboard-model/tests/: main.py
