[tool.poetry]
name = "dashboard-model"
version = "0.1.0"
description = ""
authors = ["Raul Bruno <raulfotografialima@gmail.com>"]
readme = "README.md"
packages = [{include = "dashboard_model"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
numpy = "^1.23.5"
dash = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
